--- a/apps/website/src/pages/docs/components/feedback/nprogress/theming.mdx
+++ b/apps/website/src/pages/docs/components/feedback/nprogress/theming.mdx
@@ -5,7 +5,7 @@ scope: theming
 
 ## Theming
 
-The `Nprogress` component is a multipart component. The styling needs to be
+The `NProgress` component is a multipart component. The styling needs to be
 applied to each part specifically.
 
 > To learn more about styling multipart components, visit the Chakra UI
@@ -15,16 +15,16 @@ applied to each part specifically.
 ### Anatomy
 
 - `container`
-- `inner`
-- `main`
+- `bar`
 
 ### Default theme
 
 ```jsx live=false
-import {
-  defineMultiStyleConfig,
-  definePartsStyle,
-} from '../../base/components/nprogress'
+import { createMultiStyleConfigHelpers } from '@chakra-ui/styled-system'
+import { nprogressAnatomy } from '@saas-ui/theme/anatomy'
+
+export const { definePartsStyle, defineMultiStyleConfig } =
+  createMultiStyleConfigHelpers(nprogressAnatomy.keys)
 
 const baseStyle = definePartsStyle((props) => {
   const { colorScheme: c } = props
@@ -46,157 +46,28 @@ export const nprogressTheme = defineMultiStyleConfig({
 })
 ```
 
-### Theming utilities
+### Customize the theme
 
-- `createMultiStyleConfigHelpers`: a function that returns a set of utilities
-  for creating style configs for a multipart component (`definePartsStyle` and
-  `defineMultiStyleConfig`).
-- `definePartsStyle`: a function used to create multipart style objects.
-- `defineMultiStyleConfig`: a function used to define the style configuration
-  for a multipart component.
-
-```jsx live=false
-import { nprogressAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers } from '@chakra-ui/react'
-
-const { definePartsStyle, defineMultiStyleConfig } =
-  createMultiStyleConfigHelpers(nprogressAnatomy.keys)
-```
-
-### Customizing the default theme
-
-```jsx live=false
-import { nprogressAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers } from '@chakra-ui/react'
-
-const { definePartsStyle, defineMultiStyleConfig } =
-  createMultiStyleConfigHelpers(nprogressAnatomy.keys)
-
-const baseStyle = definePartsStyle({
-  // define the part you're going to style
-  container: {
-    bg: 'red.200', // change the backgroundColor of the container
-  },
-})
-
-export const nprogressTheme = defineMultiStyleConfig({ baseStyle })
-```
-
-After customizing the app shell theme, we can import it in our theme file and
-add it in the `components` property:
+Use the `SuiNProgress` key to customize the theme.
 
 ```jsx live=false
 import { extendTheme } from '@chakra-ui/react'
-import { nprogressAnatomy } from './components/nprogress'
 
-export const theme = extendTheme({
-  components: { SuiNprogress: nprogressAnatomy },
-})
-```
-
-> Saas UI components are prefixed with `Sui` to avoid conflicts with Chakra UI.
-> This is a crucial step to make sure that any changes that we make to the
-> app shell theme are applied.
-
-### Adding a custom size
-
-Let's assume we want to include an extra large app shell icon size. Here's how
-we can do that:
-
-```jsx live=false
-import { nprogressAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
-
-const { definePartsStyle, defineMultiStyleConfig } =
-  createMultiStyleConfigHelpers(nprogressAnatomy.keys)
-
-const xl = definePartsStyle({
-  container: {
-    height: '1000px'
-  }
-})
-
-const sizes = {
-  xl,
-}
-
-export const app shellTheme = defineMultiStyleConfig({ sizes })
-
-// Now we can use the new `xl` size
-<Nprogress size="xl"> ... </Nprogress>
-```
-
-Every time you're adding anything new to the theme, you'd need to run the CLI
-command to get proper autocomplete in your IDE. You can learn more about the CLI
-tool [here](/docs/styled-system/cli).
-
-### Adding a custom variant
-
-Let's assume we want to include a custom pill variant. Here's how we can do
-that:
-
-```jsx live=false
-import { nprogressAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
-
-const { definePartsStyle, defineMultiStyleConfig } =
-  createMultiStyleConfigHelpers(nprogressAnatomy.keys)
-
-const custom = definePartsStyle({
-  container: {
-    border: '1px solid',
-    borderColor: 'gray.200',
-    background: 'gray.50',
-    borderRadius: 'full',
-
-    // Let's also provide dark mode alternatives
-    _dark: {
-      borderColor: 'gray.600',
-      background: 'gray.800',
-    },
-  },
-  main: {
-    border: '1px solid',
-    borderColor: 'gray.200',
-    background: 'gray.200',
-    color: 'gray.500',
-
-    _dark: {
-      borderColor: 'gray.600',
-      background: 'gray.600',
-      color: 'gray.400',
+const extendTheme({
+  components: {
+    SuiNProgress: {
+      defaultProps: {
+        colorScheme: 'primary',
+      },
+      baseStyle: {
+        bar: {
+          bg: 'red.500',
+          _dark: {
+            bg: 'red.500',
+          },
+        },
+      },
     },
   },
 })
-
-export const nprogressTheme = defineMultiStyleConfig({
-  variants: { custom },
-})
-
-// Now we can use the new `custom` variant
-<Nprogress variant="custom"> ... </Nprogress>
-```
-
-### Changing the default properties
-
-Let's assume we want to change the default size and variant of every app shell
-in our app. Here's how we can do that:
-
-```jsx live=false
-import { nprogressAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
-
-const { defineMultiStyleConfig } = createMultiStyleConfigHelpers(
-  nprogressAnatomy.keys,
-)
-
-export const nprogressTheme = defineMultiStyleConfig({
-  defaultProps: {
-    variant: 'custom',
-  },
-})
-
-// This saves you time, instead of manually setting the size and
-// variant every time you use an app shell:
-<Nprogress variant="custom"> ... </Nprogress>
 ```
