--- a/apps/website/src/pages/docs/components/forms/select/usage.mdx
+++ b/apps/website/src/pages/docs/components/forms/select/usage.mdx
@@ -1,7 +1,7 @@
 ---
 id: select
 title: Select
-description: A custom select component.
+description: Allows users to select one or more values from a list.
 ---
 
 <ComponentLinks
