--- a/apps/website/src/pages/docs/components/data-display/structured-list/theming.mdx
+++ b/apps/website/src/pages/docs/components/data-display/structured-list/theming.mdx
@@ -14,15 +14,18 @@ applied to each part specifically.
 
 ### Anatomy
 
-- `container`
-- `inner`
-- `main`
+- `list`
+- `item`
+- `button`
+- `header`
+- `cell`
+- `icon`
 
 ### Default theme
 
 ```jsx live=false
 import { createMultiStyleConfigHelpers } from '@chakra-ui/styled-system'
-import { structuredListAnatomy } from '../../anatomy'
+import { structuredListAnatomy } from '@saas-ui/theme/anatomy'
 const { definePartsStyle, defineMultiStyleConfig } =
   createMultiStyleConfigHelpers(structuredListAnatomy.keys)
 
@@ -101,157 +104,61 @@ export const structuredListTheme = defineMultiStyleConfig({
 })
 ```
 
-### Theming utilities
+### Customize the theme
 
-- `createMultiStyleConfigHelpers`: a function that returns a set of utilities
-  for creating style configs for a multipart component (`definePartsStyle` and
-  `defineMultiStyleConfig`).
-- `definePartsStyle`: a function used to create multipart style objects.
-- `defineMultiStyleConfig`: a function used to define the style configuration
-  for a multipart component.
-
-```jsx live=false
-import { structuredListAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers } from '@chakra-ui/react'
-
-const { definePartsStyle, defineMultiStyleConfig } =
-  createMultiStyleConfigHelpers(structuredListAnatomy.keys)
-```
-
-### Customizing the default theme
-
-```jsx live=false
-import { structuredListAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers } from '@chakra-ui/react'
-
-const { definePartsStyle, defineMultiStyleConfig } =
-  createMultiStyleConfigHelpers(structuredListAnatomy.keys)
-
-const baseStyle = definePartsStyle({
-  // define the part you're going to style
-  container: {
-    bg: 'red.200', // change the backgroundColor of the container
-  },
-})
-
-export const structuredListTheme = defineMultiStyleConfig({ baseStyle })
-```
-
-After customizing the app shell theme, we can import it in our theme file and
-add it in the `components` property:
+The `StructuredList` component uses the `SuiStructuredList` key within the theme
+object.
 
 ```jsx live=false
 import { extendTheme } from '@chakra-ui/react'
-import { structuredListAnatomy } from './components/structured-list'
 
-export const theme = extendTheme({
-  components: { SuiStructuredList: structuredListAnatomy },
-})
-```
-
-> Saas UI components are prefixed with `Sui` to avoid conflicts with Chakra UI.
-> This is a crucial step to make sure that any changes that we make to the
-> app shell theme are applied.
-
-### Adding a custom size
-
-Let's assume we want to include an extra large app shell icon size. Here's how
-we can do that:
-
-```jsx live=false
-import { structuredListAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
-
-const { definePartsStyle, defineMultiStyleConfig } =
-  createMultiStyleConfigHelpers(structuredListAnatomy.keys)
-
-const xl = definePartsStyle({
-  container: {
-    height: '1000px'
-  }
-})
-
-const sizes = {
-  xl,
-}
-
-export const app shellTheme = defineMultiStyleConfig({ sizes })
-
-// Now we can use the new `xl` size
-<StructuredList size="xl"> ... </StructuredList>
-```
-
-Every time you're adding anything new to the theme, you'd need to run the CLI
-command to get proper autocomplete in your IDE. You can learn more about the CLI
-tool [here](/docs/styled-system/cli).
-
-### Adding a custom variant
-
-Let's assume we want to include a custom pill variant. Here's how we can do
-that:
-
-```jsx live=false
-import { structuredListAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
-
-const { definePartsStyle, defineMultiStyleConfig } =
-  createMultiStyleConfigHelpers(structuredListAnatomy.keys)
-
-const custom = definePartsStyle({
-  container: {
-    border: '1px solid',
-    borderColor: 'gray.200',
-    background: 'gray.50',
-    borderRadius: 'full',
-
-    // Let's also provide dark mode alternatives
-    _dark: {
-      borderColor: 'gray.600',
-      background: 'gray.800',
-    },
-  },
-  main: {
-    border: '1px solid',
-    borderColor: 'gray.200',
-    background: 'gray.200',
-    color: 'gray.500',
-
-    _dark: {
-      borderColor: 'gray.600',
-      background: 'gray.600',
-      color: 'gray.400',
+const theme = extendTheme({
+  components: {
+    SuiStructuredList: {
+      baseStyle: {
+        item: {
+          py: 4,
+          px: 8,
+        },
+        button: {
+          borderRadius: 'full',
+          _hover: {
+            bg: 'teal.500',
+            color: 'white',
+          },
+          _focus: {
+            bg: 'teal.500',
+            color: 'white',
+          },
+          _active: {
+            bg: 'teal.600',
+            color: 'white',
+          },
+        },
+      },
+      sizes: {
+        sm: {
+          item: {
+            py: 2,
+            px: 4,
+          },
+          button: {
+            py: 2,
+            px: 4,
+          },
+        },
+        md: {
+          item: {
+            py: 4,
+            px: 8,
+          },
+          button: {
+            py: 4,
+            px: 8,
+          },
+        },
+      },
     },
   },
 })
-
-export const structuredListTheme = defineMultiStyleConfig({
-  variants: { custom },
-})
-
-// Now we can use the new `custom` variant
-<StructuredList variant="custom"> ... </StructuredList>
-```
-
-### Changing the default properties
-
-Let's assume we want to change the default size and variant of every app shell
-in our app. Here's how we can do that:
-
-```jsx live=false
-import { structuredListAnatomy } from '@saas-ui/theme/anatomy'
-import { createMultiStyleConfigHelpers, defineStyle } from '@chakra-ui/react'
-
-const { defineMultiStyleConfig } = createMultiStyleConfigHelpers(
-  structuredListAnatomy.keys,
-)
-
-export const structuredListTheme = defineMultiStyleConfig({
-  defaultProps: {
-    variant: 'custom',
-  },
-})
-
-// This saves you time, instead of manually setting the size and
-// variant every time you use an app shell:
-<StructuredList variant="custom"> ... </StructuredList>
 ```
