--- a/apps/website/src/pages/docs/components/overlay/form-dialog/usage.mdx
+++ b/apps/website/src/pages/docs/components/overlay/form-dialog/usage.mdx
@@ -130,10 +130,12 @@ When you don't pass any children and supply a schema, the fields will be auto re
 
 ```jsx
 import { Button, useDisclosure } from '@chakra-ui/react'
-import { FormDialog, FormLayout } from '@saas-ui/react'
+import { FormLayout, createFormDialog } from '@saas-ui/react'
 import { FiUsers, FiTag, FiArchive } from 'react-icons/fi'
-import { yupForm } from '@saas-ui/forms/yup'
+import { Form } from '@saas-ui/forms/yup'
 import * as yup from 'yup'
+
+const YupFormDialog = createFormDialog(Form)
 
 const schema = yup.object().shape({
   title: yup.string().required().label('Title'),
@@ -151,15 +153,15 @@ export default function Page() {
     <>
       <Button onClick={() => disclosure.onOpen()}>Create new post</Button>
 
-      <FormDialog
+      <YupFormDialog
         title="New post"
+        schema={schema}
         {...disclosure}
         defaultValues={{
           title: '',
           description: '',
         }}
         onSubmit={onSubmit}
-        {...yupForm(schema)}
       />
     </>
   )
